# geziyor

./: .deepsource.toml  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  deps.bzl  geziyor.go  geziyor_test.go  go.mod  go.sum  options.go  page_retriever.go
cache/: BUILD.bazel  cache.go  cache_test.go
cache/diskcache/: BUILD.bazel  diskcache_test.go
cache/leveldbcache/: BUILD.bazel  leveldbcache_test.go
cache/memorycache/: BUILD.bazel
client/: BUILD.bazel  client.go  client_ferret.go  proxy.go  request.go  request_test.go
export/: BUILD.bazel  csv.go  json.go
internal/: BUILD.bazel
metrics/: BUILD.bazel
middleware/: BUILD.bazel  allowed_domains.go  delay.go  duplicate_requests.go  duplicate_requests_test.go  headers.go  log_stats.go  metrics.go  middleware.go  parse_html.go  robotstxt.go
