load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/findyourpaths/geziyor
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "geziyor",
    srcs = [
        "geziyor.go",
        "options.go",
        "page_retriever.go",
    ],
    importpath = "github.com/findyourpaths/geziyor",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "//client",
        "//export",
        "//internal",
        "//metrics",
        "//middleware",
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_puerkitobio_goquery//:goquery",
        "@org_golang_x_time//rate",
    ],
)

go_test(
    name = "geziyor_test",
    srcs = ["geziyor_test.go"],
    deps = [
        ":geziyor",
        "//cache",
        "//cache/diskcache",
        "//client",
        "//export",
        "//internal",
        "//metrics",
        "@com_github_chromedp_cdproto//dom",
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_elazarl_goproxy//:goproxy",
        "@com_github_fortytw2_leaktest//:leaktest",
        "@com_github_puerkitobio_goquery//:goquery",
        "@com_github_stretchr_testify//assert",
    ],
)
