load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = ["cache.go"],
    importpath = "github.com/example/project/cache",
    visibility = ["//visibility:public"],
    deps = ["@com_github_findyourpaths_geziyor//cache/memorycache:go_default_library"],
)

go_test(
    name = "cache_test",
    srcs = ["cache_test.go"],
    embed = [":cache"],
    deps = ["@com_github_findyourpaths_geziyor//cache/memorycache:go_default_library"],
)
