load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cache.go"],
    importpath = "github.com/findyourpaths/geziyor/cache",
    visibility = ["//visibility:public"],
    deps = ["//cache/memorycache:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["cache_test.go"],
    embed = [":go_default_library"],
    deps = ["//cache/memorycache:go_default_library"],
)
