load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = ["cache.go"],
    importpath = "github.com/findyourpaths/geziyor/cache",
    visibility = ["//visibility:public"],
    deps = ["//cache/memorycache"],
)

go_test(
    name = "cache_test",
    srcs = ["cache_test.go"],
    embed = [":cache"],
    deps = ["//cache/memorycache"],
)
