load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "proxy.go",
        "request.go",
        "response.go",
    ],
    importpath = "github.com/findyourpaths/geziyor/client",
    visibility = ["//visibility:public"],
    deps = [
        "//internal:go_default_library",
        "@com_github_chromedp_cdproto//dom:go_default_library",
        "@com_github_chromedp_cdproto//network:go_default_library",
        "@com_github_chromedp_chromedp//:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
        "@org_golang_x_net//html/charset:go_default_library",
        "@org_golang_x_text//transform:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "request_test.go",
        "response_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_chromedp_chromedp//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
