load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "client.go",
        "client_ferret.go",
        "proxy.go",
        "request.go",
        "response.go",
    ],
    importpath = "github.com/findyourpaths/geziyor/client",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "@com_github_chromedp_cdproto//dom",
        "@com_github_chromedp_cdproto//network",
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_montferret_ferret//pkg/compiler",
        "@com_github_montferret_ferret//pkg/drivers",
        "@com_github_montferret_ferret//pkg/drivers/cdp",
        "@com_github_montferret_ferret//pkg/drivers/http",
        "@com_github_montferret_ferret//pkg/runtime",
        "@com_github_puerkitobio_goquery//:goquery",
        "@org_golang_x_net//html/charset",
        "@org_golang_x_text//transform",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "client_test.go",
        "request_test.go",
        "response_test.go",
    ],
    embed = [":client"],
    deps = [
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_stretchr_testify//assert",
    ],
)
