load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "csv.go",
        "export.go",
        "json.go",
        "pprint.go",
    ],
    importpath = "github.com/findyourpaths/geziyor/export",
    visibility = ["//visibility:public"],
    deps = ["//internal:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "csv_test.go",
        "json_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
