load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["metrics.go"],
    importpath = "github.com/findyourpaths/geziyor/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_kit//metrics",
        "@com_github_go_kit_kit//metrics/discard",
        "@com_github_go_kit_kit//metrics/expvar",
        "@com_github_go_kit_kit//metrics/prometheus",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)
