load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "allowed_domains.go",
        "delay.go",
        "duplicate_requests.go",
        "headers.go",
        "log_stats.go",
        "metrics.go",
        "middleware.go",
        "parse_html.go",
        "robotstxt.go",
    ],
    importpath = "github.com/example/project/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_findyourpaths_geziyor//client:go_default_library",
        "@com_github_findyourpaths_geziyor//internal:go_default_library",
        "@com_github_findyourpaths_geziyor//metrics:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
        "@com_github_temoto_robotstxt//:go_default_library",
    ],
)

go_test(
    name = "middleware_test",
    srcs = [
        "delay_test.go",
        "duplicate_requests_test.go",
    ],
    embed = [":middleware"],
    deps = [
        "@com_github_findyourpaths_geziyor//client:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
