load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "allowed_domains.go",
        "delay.go",
        "duplicate_requests.go",
        "headers.go",
        "log_stats.go",
        "metrics.go",
        "middleware.go",
        "parse_html.go",
        "robotstxt.go",
    ],
    importpath = "github.com/findyourpaths/geziyor/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//client",
        "//internal",
        "//metrics",
        "@com_github_puerkitobio_goquery//:goquery",
        "@com_github_temoto_robotstxt//:robotstxt",
    ],
)

go_test(
    name = "middleware_test",
    srcs = [
        "delay_test.go",
        "duplicate_requests_test.go",
    ],
    embed = [":middleware"],
    deps = [
        "//client",
        "@com_github_stretchr_testify//assert",
    ],
)
