load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["diskcache.go"],
    importpath = "github.com/findyourpaths/geziyor/cache/diskcache",
    visibility = ["//visibility:public"],
    deps = ["@com_github_peterbourgon_diskv//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["diskcache_test.go"],
    embed = [":go_default_library"],
    deps = ["//cache:go_default_library"],
)
