load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "diskcache",
    srcs = ["diskcache.go"],
    importpath = "github.com/findyourpaths/geziyor/cache/diskcache",
    visibility = ["//visibility:public"],
    deps = ["@com_github_peterbourgon_diskv//:diskv"],
)

go_test(
    name = "diskcache_test",
    srcs = ["diskcache_test.go"],
    embed = [":diskcache"],
    deps = ["//cache"],
)
