load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "leveldbcache",
    srcs = ["leveldbcache.go"],
    importpath = "github.com/example/project/cache/leveldbcache",
    visibility = ["//visibility:public"],
    deps = ["@com_github_syndtr_goleveldb//leveldb:go_default_library"],
)

go_test(
    name = "leveldbcache_test",
    srcs = ["leveldbcache_test.go"],
    embed = [":leveldbcache"],
    deps = ["@com_github_findyourpaths_geziyor//cache:go_default_library"],
)
