load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["leveldbcache.go"],
    importpath = "github.com/findyourpaths/geziyor/cache/leveldbcache",
    visibility = ["//visibility:public"],
    deps = ["@com_github_syndtr_goleveldb//leveldb:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["leveldbcache_test.go"],
    embed = [":go_default_library"],
    deps = ["//cache:go_default_library"],
)
